[package]
name = "freeverb"
version = "0.1.0"
edition = "2021"
authors = ["Max Genson <mail@maxgenson.de>"]
license = "GPL-3.0-or-later"

[lib]
crate-type = ["cdylib"]

[dependencies]
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", features = ["assert_process_allocs"] }
yanel_dsp = { git = "https://github.com/backtail/yanel_dsp", rev = "9e7d20d1ac27278252637937d1adbebcf221c7d0" }