[package]
name = "simple_delay"
version = "0.1.0"
edition = "2021"
authors = ["Max Genson <mail@maxgenson.de>"]
license = "GPL-3.0-or-later"

[lib]
crate-type = ["cdylib"]

[dependencies]
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", features = ["assert_process_allocs"] }
yanel_dsp = { path = "../yanel_dsp" }